--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,10 +10,12 @@
     <header class="page-header page-header-catalog page-header--container">
       <div class="page-header__wrapper">
         <div class="page-header__inner container container--reset">
-          <a href="index.html" class="page-header__logo page-header__logo--form logo">
-            <img class="logo__image logo__image--mobile" src="img/logo-img-mobile.svg" width="34" height="38" alt="Логотип магазина Cat Energy">
-            <img class="logo__image logo__image--tablet" src="img/logo-img-tablet.svg" width="60" height="50" alt="Логотип магазина Cat Energy">
-            <img class="logo__image logo__image--desktop" src="img/logo-img-desktop.svg" width="71" height="59" alt="Логотип магазина Cat Energy">
+          <a href="index.html" class="page-header__logo logo">
+            <picture>
+              <source media="(min-width: 1280px)" srcset="img/logo-img-desktop.svg">
+              <source media="(min-width: 768px)" srcset="img/logo-img-tablet.svg">
+              <img class="logo__image" src="img/logo-img-mobile.svg" width="34" height="38" alt="Логотип магазина Cat Energy">
+            </picture>
             <img class="logo__title" src="img/logo-text-mobile.svg" width="101" height="18" alt="">
           </a>
           <button class="page-header__button" type="button" aria-controls="menu__list">
@@ -252,53 +254,55 @@
           </li>
         </ul>
       </section>
-      <section class="page-content__part add-goods container">
-        <h2 class="add-goods__title">Дополнительные товары</h2>
-        <div class="add-goods__wrapper">
-          <ul class="add-goods__list">
-            <li class="add-goods__item">
-              <article class="add-goods__element add-good">
-                <h3 class="add-good__title">Сахарозаменитель</h3>
-                <dl class="add-good__list">
-                  <dt class="add-good__property">1 упаковка (100 г)</dt>
-                  <dd class="add-good__value">200 Р.</dd>
-                </dl>
-                <a href="blank.html" class="add-good__button primary-button">Заказать</a>
-              </article>
-            </li>
-            <li class="add-goods__item">
-              <article class="add-goods__element add-good">
-                <h3 class="add-good__title">Питьевая вода</h3>
-                <dl class="add-good__list">
-                  <dt class="add-good__property">5 литров</dt>
-                  <dd class="add-good__value">50 Р.</dd>
-                </dl>
-                <a href="blank.html" class="add-good__button primary-button">Заказать</a>
-              </article>
-            </li>
-            <li class="add-goods__item">
-              <article class="add-goods__element add-good">
-                <h3 class="add-good__title">Молоко</h3>
-                <dl class="add-good__list">
-                  <dt class="add-good__property">1 литр</dt>
-                  <dd class="add-good__value">100 Р.</dd>
-                </dl>
-                <a href="blank.html" class="add-good__button primary-button">Заказать</a>
-              </article>
-            </li>
-            <li class="add-goods__item">
-              <article class="add-goods__element add-good">
-                <h3 class="add-good__title">Витамины</h3>
-                <dl class="add-good__list">
-                  <dt class="add-good__property">1 упаковка (30г)</dt>
-                  <dd class="add-good__value">300 Р.</dd>
-                </dl>
-                <a href="blank.html" class="add-good__button primary-button">Заказать</a>
-              </article>
-            </li>
-          </ul>
-          <div class="add-goods__gift">
-            <p class="add-goods__text">Закажите все<br>и получите чехол для кота в подарок!</p>
+      <section class="page-content__part add-goods">
+        <div class="container">
+          <h2 class="add-goods__title">Дополнительные товары</h2>
+          <div class="add-goods__wrapper">
+            <ul class="add-goods__list">
+              <li class="add-goods__item">
+                <article class="add-goods__element add-good">
+                  <h3 class="add-good__title">Сахарозаменитель</h3>
+                  <dl class="add-good__list">
+                    <dt class="add-good__property">1 упаковка (100 г)</dt>
+                    <dd class="add-good__value">200 Р.</dd>
+                  </dl>
+                  <a href="blank.html" class="add-good__button primary-button">Заказать</a>
+                </article>
+              </li>
+              <li class="add-goods__item">
+                <article class="add-goods__element add-good">
+                  <h3 class="add-good__title">Питьевая вода</h3>
+                  <dl class="add-good__list">
+                    <dt class="add-good__property">5 литров</dt>
+                    <dd class="add-good__value">50 Р.</dd>
+                  </dl>
+                  <a href="blank.html" class="add-good__button primary-button">Заказать</a>
+                </article>
+              </li>
+              <li class="add-goods__item">
+                <article class="add-goods__element add-good">
+                  <h3 class="add-good__title">Молоко</h3>
+                  <dl class="add-good__list">
+                    <dt class="add-good__property">1 литр</dt>
+                    <dd class="add-good__value">100 Р.</dd>
+                  </dl>
+                  <a href="blank.html" class="add-good__button primary-button">Заказать</a>
+                </article>
+              </li>
+              <li class="add-goods__item">
+                <article class="add-goods__element add-good">
+                  <h3 class="add-good__title">Витамины</h3>
+                  <dl class="add-good__list">
+                    <dt class="add-good__property">1 упаковка (30г)</dt>
+                    <dd class="add-good__value">300 Р.</dd>
+                  </dl>
+                  <a href="blank.html" class="add-good__button primary-button">Заказать</a>
+                </article>
+              </li>
+            </ul>
+            <div class="add-goods__gift">
+              <p class="add-goods__text">Закажите все<br>и получите чехол для кота в подарок!</p>
+            </div>
           </div>
         </div>
       </section>
