Забыла убрать безобразие. Убрала

--- a/source/index.html
+++ b/source/index.html
@@ -120,13 +120,13 @@
         </div>
         <div class="example__slider slider">
             <div class="slider__container">
-              <div class="slider-b">
+              <div class="slider-box slider-box--before">
               <picture>
                 <source media="(min-width: 768px)" srcset="img/before-tablet.png, img/before-tablet@2x.png 2x">
                 <img class="slider__img slider__img--before" src="img/before-mobile.png" srcset="img/before-mobile@2x.png 2x" width="311" height="232" alt="Фото кота Бориса до начала употребления корма Cat Energy Slim">
               </picture>
               </div>
-              <div class="slider-after">
+              <div class="slider-box slider-box--after">
               <picture>
                 <source media="(min-width: 768px)" srcset="img/after-tablet.png, img/after-tablet@2x.png 2x">
                 <img class="slider__img slider__img--after" src="img/after-mobile.png" srcset="img/after-mobile@2x.png 2x" width="251" height="240" alt="Фото кота Бориса спустя 2 месяца употребления корма Cat Energy Slim">
