Правильные картинки для каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -69,8 +69,11 @@
                 </dl>
               </div>
               <a href="#" class="card__link card__link-image">
-                <img class="card__image" src="img/catalog/mobile/chicken-small.jpg" width="140" height="112" alt=" ">
-                <img class="card__image card__image--tablet" src="img/catalog/tablet/chicken-small.png" width="168" height="200" alt=" ">
+                <picture>
+                  <source media="(min-width: 1280px)" srcset="img/catalog/desktop/chicken-small.png, img/catalog/desktop/chicken-small@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/catalog/tablet/chicken-small.png, img/catalog/tablet/chicken-small@2x.png 2x">
+                  <img class="card__image" src="img/catalog/mobile/chicken-small.jpg" srcset="img/catalog/mobile/chicken-small@2x.jpg 2x" width="140" height="112" alt="Банка с кормом Cat Energy Pro">
+                </picture>
               </a>
               <a href="blank.html" class="card__button primary-button">Заказать</a>
             </article>
@@ -97,8 +100,11 @@
                 </dl>
               </div>
               <a href="#" class="card__link card__link-image card__link-image--large">
-                <img class="card__image" src="img/catalog/mobile/chicken-large.jpg" width="140" height="112" alt=" ">
-                <img class="card__image card__image--tablet" src="img/catalog/tablet/chicken-large.png" width="168" height="200" alt=" ">
+                <picture>
+                  <source media="(min-width: 1280px)" srcset="img/catalog/desktop/chicken-large.png, img/catalog/desktop/chicken-large@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/catalog/tablet/chicken-large.png, img/catalog/tablet/chicken-large@2x.png 2x">
+                  <img class="card__image" src="img/catalog/mobile/chicken-large.jpg" srcset="img/catalog/mobile/chicken-large@2x.jpg 2x" width="140" height="112" alt="Банка с кормом Cat Energy Pro">
+                </picture>
               </a>
               <a href="blank.html" class="card__button primary-button">Заказать</a>
             </article>
@@ -125,8 +131,11 @@
                 </dl>
               </div>
               <a href="#" class="card__link card__link-image">
-                <img class="card__image" src="img/catalog/mobile/fish-small.jpg" width="140" height="112" alt=" ">
-                <img class="card__image card__image--tablet" src="img/catalog/tablet/fish-small.png" width="168" height="200" alt=" ">
+                <picture>
+                  <source media="(min-width: 1280px)" srcset="img/catalog/desktop/fish-small.png, img/catalog/desktop/fish-small@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/catalog/tablet/fish-small.png, img/catalog/tablet/fish-small@2x.png 2x">
+                  <img class="card__image" src="img/catalog/mobile/fish-small.jpg" srcset="img/catalog/mobile/fish-small@2x.jpg 2x" width="140" height="112" alt="Банка с кормом Cat Energy Pro">
+                </picture>
               </a>
               <a href="blank.html" class="card__button primary-button">Заказать</a>
             </article>
@@ -153,8 +162,11 @@
                 </dl>
               </div>
               <a href="#" class="card__link card__link-image card__link-image--large">
-                <img class="card__image" src="img/catalog/mobile/fish-large.jpg" width="140" height="112" alt=" ">
-                <img class="card__image card__image--tablet" src="img/catalog/tablet/fish-large.png" width="168" height="200" alt=" ">
+                <picture>
+                  <source media="(min-width: 1280px)" srcset="img/catalog/desktop/fish-large.png, img/catalog/desktop/fish-large@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/catalog/tablet/fish-large.png, img/catalog/tablet/fish-large@2x.png 2x">
+                  <img class="card__image" src="img/catalog/mobile/fish-large.jpg" srcset="img/catalog/mobile/fish-large@2x.jpg 2x" width="140" height="112" alt="Банка с кормом Cat Energy Pro">
+                </picture>
               </a>
               <a href="blank.html" class="card__button primary-button">Заказать</a>
             </article>
@@ -181,8 +193,11 @@
                 </dl>
               </div>
               <a href="#" class="card__link card__link-image">
-                <img class="card__image" src="img/catalog/mobile/buckwheat-small.jpg" width="140" height="112" alt=" ">
-                <img class="card__image card__image--tablet" src="img/catalog/tablet/buckwheat-small.png" width="168" height="200" alt=" ">
+                <picture>
+                  <source media="(min-width: 1280px)" srcset="img/catalog/desktop/buckwheat-small.png, img/catalog/desktop/buckwheat-small@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/catalog/tablet/buckwheat-small.png, img/catalog/tablet/buckwheat-small@2x.png 2x">
+                  <img class="card__image" src="img/catalog/mobile/buckwheat-small.jpg" srcset="img/catalog/mobile/buckwheat-small@2x.jpg 2x" width="140" height="112" alt="Банка с кормом Cat Energy Pro">
+                </picture>
               </a>
               <a href="blank.html" class="card__button primary-button">Заказать</a>
             </article>
@@ -209,8 +224,11 @@
                 </dl>
               </div>
               <a href="#" class="card__link card__link-image card__link-image--large">
-                <img class="card__image" src="img/catalog/mobile/buckwheat-large.jpg" width="140" height="112" alt=" ">
-                <img class="card__image card__image--tablet" src="img/catalog/tablet/buckwheat-large.png" width="168" height="200" alt=" ">
+                <picture>
+                  <source media="(min-width: 1280px)" srcset="img/catalog/desktop/buckwheat-large.png, img/catalog/desktop/buckwheat-large@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/catalog/tablet/buckwheat-large.png, img/catalog/tablet/buckwheat-large@2x.png 2x">
+                  <img class="card__image" src="img/catalog/mobile/buckwheat-large.jpg" srcset="img/catalog/mobile/buckwheat-large@2x.jpg 2x" width="140" height="112" alt="Банка с кормом Cat Energy Pro">
+                </picture>
               </a>
               <a href="blank.html" class="card__button primary-button">Заказать</a>
             </article>
@@ -237,8 +255,11 @@
                 </dl>
               </div>
               <a href="#" class="card__link card__link-image">
-                <img class="card__image" src="img/catalog/mobile/rice-small.jpg" width="140" height="112" alt=" ">
-                <img class="card__image card__image--tablet" src="img/catalog/tablet/rice-small.png" width="168" height="200" alt=" ">
+                <picture>
+                  <source media="(min-width: 1280px)" srcset="img/catalog/desktop/rice-small.png, img/catalog/desktop/rice-small@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/catalog/tablet/rice-small.png, img/catalog/tablet/rice-small@2x.png 2x">
+                  <img class="card__image" src="img/catalog/mobile/rice-small.jpg" srcset="img/catalog/mobile/rice-small@2x.jpg 2x" width="140" height="112" alt="Банка с кормом Cat Energy Pro">
+                </picture>
               </a>
               <a href="blank.html" class="card__button primary-button">Заказать</a>
             </article>
@@ -316,7 +337,7 @@
         </address>
       </div>
       <div class="page-footer__map">
-        <iframe class="page-footer__map-image" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2393.9919987303897!2d30.320439600490996!3d59.93850547005891!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1618024616357!5m2!1sru!2sru" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe class="page-footer__map-image" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2393.9919987303897!2d30.320439600490996!3d59.93850547005891!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1618024616357!5m2!1sru!2sru" width="600" height="450" style="border: 0;" allowfullscreen="" loading="lazy"></iframe>
       </div>
       <div class="page-footer__contacts">
         <div class="page-footer__container">
