--- a/source/index.html
+++ b/source/index.html
@@ -67,7 +67,7 @@
         <h2 class="visually-hidden">Наши предложения</h2>
         <article class="offers__card offer">
           <h3 class="offer__title offer__title--slim">Похудение</h3>
-          <p class="offer__description">
+          <p class="offer__description offer__description--slim">
             Ваш кот весит больше собаки и почти утратил способность лазить по&nbsp;деревьям? Пора на&nbsp;диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
           </p>
           <a class="offer__link" href="blank.html">Каталог Slim</a>
@@ -93,7 +93,7 @@
             Замените один-два приема обычной еды на наше функциональное питание.
           </li>
           <li class="features__item features__item--scales">
-            Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+            Уже через месяц наслаждайтесь изменениями к лучшему<br>вашего питомца!
           </li>
         </ul>
       </section>
@@ -120,39 +120,41 @@
             </dl>
           </div>
           <div class="example__slider slider">
-              <div class="slider__container">
-                <div class="slider__box slider__box--before">
-                  <picture>
-                    <source media="(min-width: 768px)" srcset="img/before-tablet.png, img/before-tablet@2x.png 2x">
-                    <img class="slider__img slider__img--before" src="img/before-mobile.png" srcset="img/before-mobile@2x.png 2x" width="311" height="232" alt="Фото кота Бориса до начала употребления корма Cat Energy Slim">
-                  </picture>
-                </div>
+            <div class="slider__container">
+              <div class="slider__box slider__box--before">
+                <picture>
+                  <source media="(min-width: 768px)" srcset="img/before-tablet.png, img/before-tablet@2x.png 2x">
+                  <img class="slider__img slider__img--before" src="img/before-mobile.png" srcset="img/before-mobile@2x.png 2x" width="311" height="232" alt="Фото кота Бориса до начала употребления корма Cat Energy Slim">
+                </picture>
+              </div>
+              <div class="slider__box slider__box--after">
                 <picture>
                   <source media="(min-width: 768px)" srcset="img/after-tablet.png, img/after-tablet@2x.png 2x">
                   <img class="slider__img slider__img--after" src="img/after-mobile.png" srcset="img/after-mobile@2x.png 2x" width="251" height="240" alt="Фото кота Бориса спустя 2 месяца употребления корма Cat Energy Slim">
                 </picture>
               </div>
-              <div class="slider__toggle">
-                <button class="slider__button slider__button--before">Было</button>
-                <div class="slider__scale">
-                  <div class="slider__thumb"></div>
-                </div>
-                <button class="slider__button slider__button--after">Стало</button>
-              </div>
             </div>
+            <div class="slider__toggle">
+              <button class="slider__button slider__button--before">Было</button>
+              <div class="slider__scale">
+                <div class="slider__thumb"></div>
+              </div>
+              <button class="slider__button slider__button--after">Стало</button>
+            </div>
+          </div>
         </div>
       </section>
     </main>
     <footer class="page-footer page-footer--index">
       <div class="page-footer__wrapper container">
-        <p class="page-footer__cooperation">Приглашаем к сотрудничеству дилеров!</p>
+        <p class="page-footer__cooperation">Приглашаем к&nbsp;сотрудничеству дилеров!</p>
         <address class="page-footer__address">
           ул. Большая Конюшенная, д. 19/8
           <span class="page-footer__address page-footer__address--space">Санкт-Петербург</span>
         </address>
       </div>
       <div class="page-footer__map">
-        <iframe class="page-footer__map-image" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2393.9919987303897!2d30.320439600490996!3d59.93850547005891!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1618024616357!5m2!1sru!2sru" width="600" height="450" style="border: 0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe class="page-footer__map-image" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2393.9919987303897!2d30.320439600490996!3d59.93850547005891!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1618024616357!5m2!1sru!2sru" width="600" height="400" style="border: 0;" allowfullscreen="" loading="lazy"></iframe>
       </div>
       <div class="page-footer__contacts">
         <div class="page-footer__container container">
