--- a/source/form.html
+++ b/source/form.html
@@ -145,7 +145,7 @@
           </div>
         </fieldset>
         <div class="form__box-btn container container--form">
-          <button class="form__btn primary-button primary-button--form-btn" type="submit">
+          <button class="form__btn primary-button" type="submit">
             Отправить заявку
           </button>
           <p class="form__note">* — Обязательные поля</p>
