--- a/source/index.html
+++ b/source/index.html
@@ -55,7 +55,7 @@
             <h2 class="promo__title">Функциональное<br>питание для котов</h2>
             <p class="promo__slogan">Занялся собой? Займись котом!</p>
           </div>
-          <a href="form.html" class="promo__btn primary-button primary-button--promo-tablet">Подобрать программу</a>
+          <a href="form.html" class="promo__btn primary-button">Подобрать программу</a>
           <picture>
             <source media="(min-width: 1280px)" srcset="img/product-desktop.png, img/product-desktop@2x.png 2x">
             <source media="(min-width: 768px)" srcset="img/product-tablet.png, img/product-tablet@2x.png 2x">
