--- a/source/index.html
+++ b/source/index.html
@@ -53,7 +53,9 @@
         <div class="promo__wrapper container">
           <div class="promo__inner">
             <h2 class="promo__title">Функциональное<br>питание для котов</h2>
-            <p class="promo__slogan">Занялся собой? Займись котом!</p>
+            <p class="promo__slogan">
+              Занялся собой? Займись котом!
+            </p>
           </div>
           <a href="form.html" class="promo__btn primary-button">Подобрать программу</a>
           <picture>
